--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,5 @@
-name: Build & Deploy
+name: Deploy to test
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - master
@@ -10,25 +7,27 @@ on:
 jobs:
   build:
     name: Build App
-    environment: Release
     runs-on: macos-11
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install gpg
         run: brew install gnupg
+
       - name: Decrypt certificate and profile
         env:
           IOS_KEYS: ${{ secrets.IOS_KEYS }}
-        run: ./.github/scripts/secrets.sh
+        run: ./.github/secrets/production.sh
       - name: Setup keychain
         run: ./.github/scripts/keychain.sh
+
       - name: Archiving project
         env:
           PR_NUMBER: $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-        run: ./.github/scripts/build.sh
+        run: ./.github/scripts/build.sh Debug
       - name: Exporting .ipa
-        run: ./.github/scripts/export_ipa.sh
+        run: ./.github/scripts/export_ipa.sh test
+
       - name: Archive xcarchive
         uses: actions/upload-artifact@v3
         with:
@@ -37,13 +36,15 @@ jobs:
       - name: Archive IPA
         uses: actions/upload-artifact@v3
         with:
-          name: StormViewer.ipa
-          path: build/StormViewer.ipa
+          name: Storm Viewer.ipa
+          path: "build/Storm\ Viewer.ipa"
 
   deploy:
     name: Deploy App
     needs: build
-    environment: Release
+    environment:
+      name: Test
+      url: ${{ steps.publish.outputs.testfairy_url }}
     runs-on: macos-11
     steps:
       - name: Checkout repository
@@ -51,10 +52,13 @@ jobs:
       - name: Download IPA
         uses: actions/download-artifact@v3
         with:
-          name: StormViewer.ipa
+          name: Storm Viewer.ipa
+
       - name: Publishing app
+        id: publish
         if: success()
         env:
-          APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
-          APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
-        run: ./.github/scripts/publish_testflight.sh
+          TESTFAIRY_API_KEY: ${{ secrets.TESTFAIRY_API_KEY }}
+        run: |
+          ./.github/scripts/publish_testfairy.sh
+          echo "::set-output name=testfairy_url::$URL"
