Fix environment url

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,6 @@ on:
   pull_request:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   build:
@@ -62,4 +61,4 @@ jobs:
           TESTFAIRY_API_KEY: ${{ secrets.TESTFAIRY_API_KEY }}
         run: |
           ./.github/scripts/publish_testfairy.sh
-          echo "::set-output name=testfairy_url::$URL"
+          echo "testfairy_url=$URL" >> $GITHUB_OUTPUT
